--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,10 @@
     <string name="write_cancel">No</string>
     <string name="write_confirm">Yes</string>
     <string name="write_insert_image_title">Insert an image</string>
-    <string name="write_img_url">from URL</string>
-    <string name="write_img_gallery">from Gallery</string>
+    <string name="write_img_url">URL</string>
+    <string name="write_img_gallery">Gallery</string>
     <string name="write_img_name_holder">Input picture name.</string>
     <string name="write_img_name_label">name</string>
+    <string name="write_img_url_holder">Input image url.</string>
+    <string name="write_img_url_label">URL</string>
 </resources>
