Use cache directory to share files. Fix the bugs in last version.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MemoryMarkdown</string>
+    <string name="app_name">Markfun</string>
 
     <!--  HomeScreen.kt  -->
     <string name="home_hint">Choose file to read \n or write by yourself!</string>
